--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <head>
     <title>Teste Mercado Livre</title>
     <link rel="stylesheet" type="text/css" href="assets/css/all.css">
-    <link rel="stylesheet" href="node_modules/chico/dist/ui/chico.min.css" />
-    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css" />
+    <link rel="stylesheet" href="assets/css/chico.min.css" />
+    <link rel="stylesheet" href="assets/css/normalize.css" />
 </head>
 
 <body>
@@ -90,8 +90,8 @@
 
     </div>
     <script src="https://ui.mlstatic.com/chico/tiny/0.2.3/tiny.min.js"></script>
-    <script src="node_modules/chico/dist/ui/chico.min.js"></script>
-    <script src="node_modules/vue/dist/vue.min.js"></script>
+    <script src="assets/js/chico.min.js"></script>
+    <script src="assets/js/dist/vue.min.js"></script>
     <script src="assets/js/all.js"></script>
 </body>
 
