+ correção de bug, source do Vue.js

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     <script src="https://ui.mlstatic.com/chico/tiny/0.2.3/tiny.min.js"></script>
     <script src="assets/js/chico.min.js"></script>
-    <script src="assets/js/dist/vue.min.js"></script>
+    <script src="assets/js/vue.min.js"></script>
     <script src="assets/js/all.js"></script>
 </body>
 
